# github-client-sdk

./: .gitignore  CONTRIBUTING.md  README.md  main.txt  pyproject.toml  requirements.txt  setup.py  token.txt
.github/workflows/: pylint.yml
examples/: authentication.py  create_workflow.py  delete_workflow.py  env_variables.py  list_repos.py
src/GIthub/: auth.py  clients.py  comments.py  issues.py  repo.py
src/Github/: __init__.py  auth.py  client.py  exceptions.py  issues.py  variables.py
src/gcs-cli/: auth.py  main.py
src/github_client_sdk/: __init__.py
tests/: test_auth.py  test_repos.py
