[project]
name = "github-client-sdk"
version = "0.1.0"
description = "A Python SDK for interacting with the GitHub API"
authors = [
    {name = "Azim Hossain Tuhin", email = "codeocmmerze@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]>=0.28.1,<0.29.0"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry]
name = "github-client-sdk"
version = "0.1.0"
packages = [{include = "github_client_sdk", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
